--- a/src/robot_description/CMakeLists.txt
+++ b/src/robot_description/CMakeLists.txt
@@ -5,15 +5,14 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+# find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(ur_description REQUIRED)
-find_package(gazebo_ros REQUIRED)
-find_package(controller_manager REQUIRED)
-find_package(robot_state_publisher REQUIRED)
-find_package(xacro REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
 # 安装资源文件（URDF/launch/world）
-install(DIRECTORY urdf launch worlds
+install(DIRECTORY launch meshes urdf rviz
   DESTINATION share/${PROJECT_NAME}
 )
 
